# Senintel-Cognee-WeMakeDevs

./: .env.example  .gcloudignore  .gitignore  Dockerfile  Google Cloud Rapid Agent Hackathon.docx  LICENSE  README.md  SentinelAI-Implementation-Plan.docx  cognee-graph.html  pyproject.toml  requirements.txt
agents/: __init__.py
agents/sentinel/: __init__.py  agent.py
context/: handover.md  progress.md  setup-runbook.md  structure.md
context-wemakedevs/: progress.md  structure.md  submission.md
context-wemakedevs/plan/: README.md  (+3 more)
dashboard/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
delivery/: briefing.py
infra/: README.md  deploy.sh
integrations/: __init__.py  base.py
scripts/: export_eval_gate.py  probe_dynatrace.py  probe_gitlab.py  run_agent.py  run_briefing.py  run_code_review.py  run_eval_gate.py  seed_team_memory.py
shared/: __init__.py  config.py  llm.py  logging.py  mcp.py  mcp_client.py  models.py  observability.py
storage/: embeddings.py  eval_trends.py  incident_kb.py  signal_store.py
tests/: conftest.py  test_ai_quality_gate.py  test_arize_simulator.py  test_code_guardian.py  test_code_memory.py  test_correlation.py  test_dashboard_api.py  test_delivery.py  test_demo_director.py  test_dynatrace_real.py  test_dynatrace_simulator.py  test_eval_runner.py  test_eval_trends.py  test_export_eval_gate.py  test_foundation.py  test_gitlab_real.py  test_gitlab_simulator.py  test_incident_kb.py  test_observability.py  test_poller.py  test_production_sentinel.py  test_signal_store.py  test_webhook_gateway.py
(+111 files in other folders)
