[project]
name = "sentinelai"
version = "0.1.0"
description = "Autonomous engineer guarding the whole software delivery lifecycle — code, production, and AI quality."
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["context", "experiment", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
